change author and bas repo name for deploy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "three_vite",
   "version": "0.0.5",
-  "author": "fdoganis",
+  "author": "abnotrogiente",
   "license": "MIT",
   "type": "module",
   "scripts": {
